  - #1391, Errors during upgrade from 1.5
  - #1828, Poor selectivity estimate on ST_DWithin
  - #1838, error importing tiger/line data
  - #1869, ST_AsBinary is not unique - 
       added to legacy_minor/legacy.sql scripts
  - #1885, Missing field from tabblock table in tiger2010 census_loader.sql
  - #1891, Use LDFLAGS environment when building liblwgeom
  - #1900, Fix pgsql2shp for big-endian systems 
  - #1932, Fix raster2pgsql for invalid syntax for setting index tablespace
  - #1936, ST_GeomFromGML on CurvePolygon causes server crash
  - #1955, ST_ModEdgeHeal and ST_NewEdgeHeal for doubly connected edges
  - #1957, ST_Distance to a one-point LineString returns NULL
  - #1976, Geography point-in-ring code overhauled for more reliability
  - #1978, wrong answer calculating length of closed circular arc (circle)
  - #1981, Remove unused but set variables as found with gcc 4.6+
  - #1987, Restore 1.5.x behaviour of ST_Simplify 
  - #1989, Preprocess input geometry to just intersection with raster
           to be clipped
  - #1991, geocode really slow on PostgreSQL 9.2
  - #1996, support POINT EMPTY in GeoJSON output
  - #1998, Fix ST_{Mod,New}EdgeHeal joining edges sharing both endpoints
  - #2001, ST_CurveToLine has no effect if the geometry doesn't actually contain an arc
  - #2015, ST_IsEmpty('POLYGON(EMPTY)') returns False
  - #2019, ST_FlipCoordinates does not update bbox
  - #2025, Fix side location conflict at TopoGeo_AddLineString 
  - #2062, improve performance of distance calculations
  - #2033, Fix adding a splitting point into a 2.5d topology 
  - #2051, Fix excess of precision in ST_AsGeoJSON output
  - #2052, Fix buffer overflow in lwgeom_to_geojson
  - #2056, Fixed lack of SRID check of raster and geometry in ST_SetValue()
  - #2057, Fixed linking issue for raster2psql to libpq
  - #2060, Fix "dimension" check violation by GetTopoGeomElementArray
  - #2072, Removed outdated checks preventing ST_Intersects(raster) from